--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Vedanta Dental Care</title>
 
-    <meta name="description" content="Dualite Alpha Generated Project" />
-    <meta name="author" content="Dulaite Alpha" />
+    <meta name="description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
+    <meta name="author" content="Vedanta Dental Care" />
 
-    <meta property="og:title" content="vite + react + ts" />
-    <meta property="og:description" content="Dualite Alpha Generated Project" />
+    <meta property="og:title" content="Vedanta Dental Care" />
+    <meta property="og:description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vedantaclinic-qdo1-dualite.netlify.app" />
     <meta property="og:image" content="https://ibb.co/67X3xfSV" />
     <meta property="og:image:width" content="960" />
     <meta property="og:image:height" content="600" />
-    <meta property="og:image:alt" content="Screenshot of the Alpha Generated Project" />
+    <meta property="og:image:alt" content="Vedanta Dental Care Clinic Preview" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="vite + react + ts" />
-    <meta name="twitter:description" content="Dualite Alpha Generated Project" />
+    <meta name="twitter:title" content="Vedanta Dental Care" />
+    <meta name="twitter:description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
     <meta name="twitter:site" content="@dualitedev" />
     <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
 
