--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="QBcaaI6eyyIZ_u_1B5Rkt8CjIjFx8dSX201Il-VAGQw" />
+    
     <title>Vedanta Dental Care</title>
 
-    <meta name="description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
+    <meta name="description" content="Advanced & Pain-Free Dental Care in Bihar. Senior Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
     <meta name="author" content="Vedanta Dental Care" />
 
     <meta property="og:title" content="Vedanta Dental Care" />
-    <meta property="og:description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
+    <meta property="og:description" content="Advanced & Pain-Free Dental Care in Bihar. Senior Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://vedantaclinic-qdo1-dualite.netlify.app" />
+    <meta property="og:url" content="https://vedantaclinic-7ggm-dualite.netlify.app" />
     <meta property="og:image" content="https://ibb.co/67X3xfSV" />
     <meta property="og:image:width" content="960" />
     <meta property="og:image:height" content="600" />
@@ -19,26 +23,12 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Vedanta Dental Care" />
-    <meta name="twitter:description" content="Advanced & Pain-Free Dental Care in Bihar. Specialized Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
+    <meta name="twitter:description" content="Advanced & Pain-Free Dental Care in Bihar. Senior Root Canal Consultant & Cosmetic Dentistry Expert led by Dr. B. Chaudhary." />
     <meta name="twitter:site" content="@dualitedev" />
     <meta name="twitter:image" content="https://ibb.co/67X3xfSV" />
 
-    <link rel="canonical" href="https://vedantaclinic-qdo1-dualite.netlify.app" />
+    <link rel="canonical" href="https://vedantaclinic-7ggm-dualite.netlify.app" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/HLfD5wgf/dualite-favicon.png" />
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "AlphaProject",
-        "url": "https://vedantaclinic-qdo1-dualite.netlify.app",
-        "description": "Dualite Alpha Generated Project",
-        "publisher": {
-          "@type": "Organization",
-          "name": "Dualite Alpha"
-        }
-      }
-    </script>
   </head>
   <body>
     <div id="root"></div>
